--- a/public/color/pink.css
+++ b/public/color/pink.css
@@ -1,1 +1,1 @@
-:root{--accent: rgb(238,114,241);--accent-alpha-70: rgba(238,114,241,.7);--accent-alpha-20: rgba(238,114,241,.2);--background: #21202C;--color: white;--border-color: rgba(255, 255, 255, .1)}
+:root{--accent: rgb(196, 167, 231);--accent-alpha-70: rgba(196, 167, 231, .7);--accent-alpha-20: rgba(196, 167, 231, .7);--background: #191724;--color: white;--border-color: rgba(255, 255, 255, .1)}
