trying new colors

--- a/sass/color/pink.scss
+++ b/sass/color/pink.scss
@@ -1,9 +1,9 @@
 :root {
-  --accent: rgb(196, 167, 231);
-  --accent-alpha-70: rgba(196, 167, 231, .7);
-  --accent-alpha-20: rgba(196, 167, 231, .7);
+  --accent: rgb(35, 33, 54);
+  --accent-alpha-70: rgba(35, 33, 54, .7);
+  --accent-alpha-20: rgba(35, 33, 54, .2);
 
-  --background: #191724;
-  --color: white;
+  --background: #232136;
+  --color: #e0def4;
   --border-color: rgba(255, 255, 255, .1);
   }
