--- a/public/color/pink.css
+++ b/public/color/pink.css
@@ -1,1 +1,1 @@
-:root{--accent: rgb(35,33,54);--accent-alpha-70: rgba(35,33,54,.7);--accent-alpha-20: rgba(35,33,54,.2);--background: #232136;--color: white;--border-color: rgba(255, 255, 255, .1)}
+:root{--accent: rgb(246, 193, 119) --accent-alpha-70: rgba(246, 193, 119, .7) --accent-alpha-20: rgba(246, 193, 119, .2) --background: #232136;--color: white;--border-color: rgba(255, 255, 255, .1)}
