--- a/sass/color/pink.scss
+++ b/sass/color/pink.scss
@@ -1,7 +1,7 @@
 :root {
-  --accent: rgb(246, 193, 119)
-  --accent-alpha-70: rgba(246, 193, 119, .7)
-  --accent-alpha-20: rgba(246, 193, 119, .2)
+  --accent: rgb(246, 193, 119);
+  --accent-alpha-70: rgba(246, 193, 119, .7);
+  --accent-alpha-20: rgba(246, 193, 119, .2);
 
   --background: #232136;
   --color: white;
