changed text color

--- a/sass/color/pink.scss
+++ b/sass/color/pink.scss
@@ -4,6 +4,6 @@
   --accent-alpha-20: rgba(235, 111, 146, .2);
 
   --background: #232136;
-  --color: white;
+  --color: #e0def4;
   --border-color: rgba(255, 255, 255, .1);
   }
